[package]
name = "can-viewer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
colored = "3.0.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = {  version = "0.29.0" }
socketcan = { version = "3.5.0", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
